--- a/src/main/webapp/inward/inward_timed_item.xhtml
+++ b/src/main/webapp/inward/inward_timed_item.xhtml
@@ -10,30 +10,51 @@
         <h:panelGroup >
             <h:form id="form"  >
                 <p:growl/>
+                <p:focus id="selectFocus" for="lstSelect" />
+                <p:focus id="detailFocus" for="txtName" />
+
                 <p:panel header="Manage Timed Item" >
                     <div class="row w-100">
                         <div class="col-4">
                             <p:panel header="Search Timed Item" class="" >
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                    <p:commandButton id="btnAdd" value="Add" action="#{timedItemController.prepareAdd()}" >
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
-                                        </f:ajax>
+
+                                    <p:commandButton 
+                                        id="btnAdd"
+                                        value="Add"
+                                        action="#{timedItemController.prepareAdd()}"
+                                        process="btnAdd"
+                                        class="m-1 ui-button-success "
+                                        update="lstSelect gpDetail ">
                                     </p:commandButton>
 
-                                    <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;" action="#{timedItemController.delete()}"  value="Delete"  >
+                                    <p:commandButton
+                                        id="btnDelete"
+                                        onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                    return false;" action="#{timedItemController.delete()}" 
+                                        class="m-1 ui-button-danger"
+                                        value="Delete"  >
                                     </p:commandButton>
+
                                 </h:panelGrid>
-                                <h:panelGrid id="gpSelectText" >
-                                    <p:inputText autocomplete="off" id="txtSearch" value="#{timedItemController.selectText}" >
-                                        <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
-                                    </p:inputText>
-                                    <p:selectOneListbox   id="lstSelect"   value="#{timedItemController.current}" class="w-100">
-                                        <f:selectItems  value="#{timedItemController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                        <p:ajax event="change"   update="gpDetail" process="@this" >
-                                        </p:ajax>
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
+
+<!--                                    <p:inputText autocomplete="off" id="txtSearch" value="#{timedItemController.selectText}" >
+        <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
+    </p:inputText>-->
+
+                                <p:selectOneListbox 
+                                    id="lstSelect"
+                                    value="#{timedItemController.current}"
+                                    class="w-100"
+                                    filter="true">
+                                    <f:selectItems  value="#{timedItemController.selectedItems}"
+                                                    var="myItem" itemValue="#{myItem}"
+                                                    itemLabel="#{myItem.name}" >
+                                    </f:selectItems>
+
+                                    <f:ajax render="gpDetail" execute="lstSelect" >
+                                    </f:ajax>
+                                </p:selectOneListbox>
 
                             </p:panel>
                         </div>
@@ -42,69 +63,81 @@
                                 <f:facet name="header" >
                                     <h:outputLabel value="Edit Details" ></h:outputLabel>
 
-                                    <p:commandButton style="float:right;" id="btnSave" value="Save"  action="#{timedItemController.saveSelected()}" styleClass="buttons" 
-                                                     ajax="false"   >
-                                    </p:commandButton>
-                                    <p:defaultCommand target="btnSave"/>
+
                                 </f:facet>
-                                <h:panelGrid id="gpDetail" columns="1" >
-                                    <h:panelGrid id="gpDetailText" columns="2" rendered="#{timedItemController.current ne null}">
-                                        <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtName" class="w-100" value="#{timedItemController.current.name}" required="true" ></p:inputText>
-                                        <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtAddress"  class="pdInputText w-100" value="#{timedItemController.current.printName}"  ></p:inputText>
-                                        <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtFullName"  class="pdInputText w-100" value="#{timedItemController.current.fullName}"  ></p:inputText>
 
 
-                                        <p:selectBooleanCheckbox   id="chkBilledAs" value="#{timedItemController.billedAs}" itemLabel="Billed as a seperate timedItem"  >
-                                            <p:ajax event="change" process="@this" update="billedAsIx" />
-                                        </p:selectBooleanCheckbox>
-                                        <p:autoComplete  styleClass="w-100" disabled="#{!timedItemController.billedAs}" widgetVar="aIx1" id="billedAsIx" forceSelection="true" value="#{timedItemController.current.billedAs}" completeMethod="#{timedItemController.completeInvest}" var="ix1" itemLabel="#{ix1.name}" itemValue="#{ix1}" >
-                                        </p:autoComplete>
+                                <p:panelGrid id="gpDetail" columns="2" rendered="#{timedItemController.current ne null}">
+                                    <h:outputText id="lblName" value="Name" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtName" class="w-100" value="#{timedItemController.current.name}" required="true" ></p:inputText>
+                                    <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtAddress"  class="pdInputText w-100" value="#{timedItemController.current.printName}"  ></p:inputText>
+                                    <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
+                                    <p:inputText autocomplete="off" id="txtFullName"  class="pdInputText w-100" value="#{timedItemController.current.fullName}"  ></p:inputText>
 
-                                        <p:selectBooleanCheckbox  id="chkReportedAs" value="#{timedItemController.reportedAs}" itemLabel="Reported as a seperate timedItem" >
-                                            <p:ajax event="change" process="@this" update="reportedAsIx" />
-                                        </p:selectBooleanCheckbox>
-                                        <p:autoComplete class="w-100" disabled="#{!timedItemController.reportedAs}" widgetVar="aIx2" id="reportedAsIx" forceSelection="true" value="#{timedItemController.current.reportedAs}" completeMethod="#{timedItemController.completeInvest}" var="ix2" itemLabel="#{ix2.name}" itemValue="#{ix2}" >
-                                        </p:autoComplete>
 
-                                        <h:outputText value="Institution" ></h:outputText>
-                                        <p:selectOneMenu id="cmbIns" class="w-100" value="#{timedItemController.current.institution}" >
-                                            <f:selectItem itemLabel="Please select a Institution"/>
-                                            <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                            <f:ajax execute="cmbIns" render="cmbDep" event="change"/>   
-                                        </p:selectOneMenu>
-                                        <h:outputText value="Department" ></h:outputText>
-                                        <p:selectOneMenu id="cmbDep" class="w-100" value="#{timedItemController.current.department}" >
-                                            <f:selectItem itemLabel="Please select a Department" />
-                                            <f:selectItems value="#{timedItemController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                        </p:selectOneMenu>
+                                    <p:selectBooleanCheckbox   id="chkBilledAs" value="#{timedItemController.billedAs}" itemLabel="Billed as a seperate timedItem"  >
+                                        <p:ajax event="change" process="@this" update="billedAsIx" />
+                                    </p:selectBooleanCheckbox>
+                                    <p:autoComplete  styleClass="w-100" disabled="#{!timedItemController.billedAs}" widgetVar="aIx1" id="billedAsIx" forceSelection="true" value="#{timedItemController.current.billedAs}" completeMethod="#{timedItemController.completeInvest}" var="ix1" itemLabel="#{ix1.name}" itemValue="#{ix1}" >
+                                    </p:autoComplete>
 
-                                        <h:outputText value="Department Type" ></h:outputText>
-                                        <p:selectOneMenu id="dropdown" class="w-100" value="#{timedItemController.current.departmentType}">
-                                            <f:selectItem itemLabel="Please select a Department Type" itemValue="" />
-                                            <f:selectItems value="#{enumController.departmentType}" var="type" itemValue="#{type}" itemLabel="#{type}" />
-                                        </p:selectOneMenu>
+                                    <p:selectBooleanCheckbox  id="chkReportedAs" value="#{timedItemController.reportedAs}" itemLabel="Reported as a seperate timedItem" >
+                                        <p:ajax event="change" process="@this" update="reportedAsIx" />
+                                    </p:selectBooleanCheckbox>
+                                    <p:autoComplete class="w-100" disabled="#{!timedItemController.reportedAs}" widgetVar="aIx2" id="reportedAsIx" forceSelection="true" value="#{timedItemController.current.reportedAs}" completeMethod="#{timedItemController.completeInvest}" var="ix2" itemLabel="#{ix2.name}" itemValue="#{ix2}" >
+                                    </p:autoComplete>
 
-                                        <h:outputText value="Inward Charge Category" ></h:outputText>
-                                        <p:selectOneMenu id="cmbInward" class="w-100" value="#{timedItemController.current.inwardChargeType}" >
-                                            <f:selectItem itemLabel="Please select Charge"/>
-                                            <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
-                                        </p:selectOneMenu>
-                                        <h:outputText value="Category" ></h:outputText>
-                                        <p:selectOneMenu id="cmbCat" class="w-100" value="#{timedItemController.current.category}" >
-                                            <f:selectItem itemLabel="Please select a Category"/>
-                                            <f:selectItems value="#{timedItemCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                        </p:selectOneMenu>
+                                    <h:outputText value="Institution" ></h:outputText>
+                                    <p:selectOneMenu id="cmbIns" class="w-100" value="#{timedItemController.current.institution}" >
+                                        <f:selectItem itemLabel="Please select a Institution"/>
+                                        <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                        <f:ajax execute="cmbIns" render="cmbDep" event="change"/>   
+                                    </p:selectOneMenu>
+                                    <h:outputText value="Department" ></h:outputText>
+                                    <p:selectOneMenu id="cmbDep" class="w-100" value="#{timedItemController.current.department}" >
+                                        <f:selectItem itemLabel="Please select a Department" />
+                                        <f:selectItems value="#{timedItemController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                    </p:selectOneMenu>
 
-                                        <h:outputText value="" ></h:outputText>
-                                        <p:selectBooleanCheckbox value="#{timedItemController.current.userChangable}" itemLabel="Can change Rate"/>
+                                    <h:outputText value="Department Type" ></h:outputText>
+                                    <p:selectOneMenu id="dropdown" class="w-100" value="#{timedItemController.current.departmentType}">
+                                        <f:selectItem itemLabel="Please select a Department Type" itemValue="" />
+                                        <f:selectItems value="#{enumController.departmentType}" var="type" itemValue="#{type}" itemLabel="#{type}" />
+                                    </p:selectOneMenu>
 
-                                        <h:outputText value="" ></h:outputText>
-                                        <p:selectBooleanCheckbox value="#{timedItemController.current.discountAllowed}" itemLabel="Discount Allowed"/>
-                                    </h:panelGrid>
-                                </h:panelGrid>
+                                    <h:outputText value="Inward Charge Category" ></h:outputText>
+                                    <p:selectOneMenu id="cmbInward" class="w-100" value="#{timedItemController.current.inwardChargeType}" >
+                                        <f:selectItem itemLabel="Please select Charge"/>
+                                        <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
+                                    </p:selectOneMenu>
+
+                                    <h:outputText value="Category" ></h:outputText>
+                                    <p:selectOneMenu id="cmbCat" class="w-100" value="#{timedItemController.current.category}" >
+                                        <f:selectItem itemLabel="Please select a Category"/>
+                                        <f:selectItems value="#{timedItemCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                    </p:selectOneMenu>
+
+                                    <h:outputText value="Can change Rate" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{timedItemController.current.userChangable}" itemLabel=""/>
+
+                                    <h:outputText value="Discount Allowed" ></h:outputText>
+                                    <p:selectBooleanCheckbox value="#{timedItemController.current.discountAllowed}" itemLabel=""/>
+
+                                   
+                                        <p:commandButton 
+                                            style="float:left;" 
+                                            id="btnSave" 
+                                            value="Save "  
+                                            action="#{timedItemController.saveSelected()}" 
+                                            styleClass="buttons" 
+                                            process="btnSave gpDetail"
+                                            class="m-1 ui-button-warning"
+                                            update="lstSelect ">
+                                        </p:commandButton>
+                                        <p:defaultCommand target="btnSave"/>
+                                   
+                                </p:panelGrid>
                             </p:panel>
                         </div>
                     </div>
