--- a/src/main/webapp/inward/inward_timed_item.xhtml
+++ b/src/main/webapp/inward/inward_timed_item.xhtml
@@ -32,7 +32,8 @@
                                 process="btnDelete"
                                 update="lstSelect gpDetail"
                                 onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;" action="#{timedItemController.delete()}" 
+                                                    return false;"
+                                action="#{timedItemController.delete()}" 
                                 class="m-1 ui-button-danger"
                                 value="Delete"
                                 >
@@ -56,25 +57,21 @@
                                 <p:ajax update="gpDetail" process="lstSelect" >
                                 </p:ajax>
                             </p:selectOneListbox>
-
                         </div>
 
                         <div class="col-8">
-                            <p:panel header="Edit Details">
+                            <p:panel header="Edit Details" id="gpDetail">
                                 <f:facet name="header" >
                                     <h:outputLabel value="Edit Details" ></h:outputLabel>
                                 </f:facet>
 
-
-                                <p:panelGrid id="gpDetail" columns="2" rendered="#{timedItemController.current ne null}">
+                                <p:panelGrid columns="2" rendered="#{timedItemController.current ne null}">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
                                     <p:inputText autocomplete="off" id="txtName" class="w-100" value="#{timedItemController.current.name}" required="true" ></p:inputText>
                                     <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
                                     <p:inputText autocomplete="off" id="txtAddress"  class="pdInputText w-100" value="#{timedItemController.current.printName}"  ></p:inputText>
                                     <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
                                     <p:inputText autocomplete="off" id="txtFullName"  class="pdInputText w-100" value="#{timedItemController.current.fullName}"  ></p:inputText>
-
-
                                     <p:selectBooleanCheckbox   id="chkBilledAs" value="#{timedItemController.billedAs}" itemLabel="Billed as a seperate timedItem"  >
                                         <p:ajax event="change" process="@this" update="billedAsIx" />
                                     </p:selectBooleanCheckbox>
@@ -136,7 +133,6 @@
                                         </p:commandButton>
                                         <p:defaultCommand target="btnSave"/>
                                     </f:facet>
-
                                 </p:panelGrid>
                             </p:panel>
                         </div>
