--- a/src/main/webapp/inward/inward_search_final.xhtml
+++ b/src/main/webapp/inward/inward_search_final.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="Search Inpatient Bills by Bill Created Date" >
+                    <p:panel header="Search Inpatient Bills by Bill Created Date" style="height: 100vh" >
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="form d-flex flex-column" >
@@ -117,16 +117,10 @@
                                     <f:setPropertyActionListener value="#{bb}" target="#{inwardSearch.bill}"/>
                                 </p:commandButton>
                             </p:column>
-
-
                         </p:dataTable>
                             </div>
                         </div>
-                        
-                        
-
                     </p:panel>
-
                 </h:form>
             </ui:define>
 
