--- a/src/main/webapp/inward/inward_search_professional_estimate.xhtml
+++ b/src/main/webapp/inward/inward_search_professional_estimate.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="Search Inward Estimated Professional Bills" >
+                    <p:panel header="Search Inward Estimated Professional Bills" style="height: 100vh">
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="form d-flex flex-column" >
